deploy/k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: slink-api
  labels:
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: http
  selector:
    app.kubernetes.io/component: api
