deploy/k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: slink-frontend
  labels:
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/component: frontend
